# hilbert-cli

./: .gitignore  AGENTS.md  README.md  ascii.txt  install.sh  pyproject.toml
cli/: .env.example  README.md  package.json  tsconfig.json
cli/completions/: hilbert.bash  hilbert.zsh
cli/src/: cli.ts  errors.ts  index.ts  repl.ts
cli/src/commands/: audit.ts  compare.ts  config.ts  continue.ts  deepresearch.ts  diff.ts  doctor.ts  draft.ts  lit.ts  log.ts  replicate.ts  review.ts  sessions.ts  setup.ts  watch.ts
cli/src/core/: config.ts  constants.ts  research.ts  state.ts
cli/src/core/llm/: client.ts  index.ts  prompts.ts  utils.ts
cli/src/ipc/: client.ts  index.ts  protocol.ts
cli/src/ui/: index.ts  panels.ts  render.ts  theme.ts
cli/tests/: integration.test.ts
src/hilbert/: __init__.py  __main__.py  cli.py  server.py
src/hilbert/config/: __init__.py  logging.py  settings.py
src/hilbert/graph/: __init__.py
src/hilbert/llm/: __init__.py  client.py  prompts.py  utils.py
src/hilbert/models/: __init__.py  finding.py  hypothesis.py  paper.py  report.py  session.py
src/hilbert/nodes/: __init__.py  contradiction.py  hypothesis.py  merger.py  planner.py  reviewer.py  search.py  synthesis.py  verifier.py  writer.py
src/hilbert/persistence/: __init__.py  manager.py  schema.py
src/hilbert/sources/: __init__.py  arxiv.py  embeddings.py  semantic_scholar.py
src/hilbert/state/: research.py
src/hilbert/ui/: __init__.py  banner.py  charts.py  mermaid.py  panels.py  progress.py  tables.py  theme.py  themes.py
tests/: __init__.py  test_cli.py  test_config.py  test_embeddings.py  test_llm_utils.py  test_models.py  test_state.py
website/src/styles/: global.css
(+21 files in other folders)
